fix: 改用官方BOM接口
